--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -54,3 +54,18 @@
         font-family: "Cairo", sans-serif;
     }
 }
+
+.card{
+    border: #545454 1px solid;
+    color: #545454;
+    padding: 5px;
+    border-radius: 5px;
+    background-color: white;
+    box-shadow: #545454 0px 0px 5px;
+}
+
+.active{
+    color: green;
+    border: 1px solid green;
+    background-color: #e4ffe4;
+}
