--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,20 +1,23 @@
-html{
-	height: 100%;
+html {
+    height: 100%;
 }
-body{
-	height: 100%;
-	
+
+body {
+    height: 100%;
 }
-.btn-container{
-	display: flex;
+
+.btn-container {
+    display: flex;
 }
-button{
-	flex: 1;
-	height: 40px;
-	font-size: 33px;
+
+button {
+    flex: 1;
+    height: 40px;
+    font-size: 33px;
 }
-h1{
-	font-size: 49px !important;
+
+h1 {
+    font-size: 49px !important;
     color: #ffffff;
     background-color: #900c0c;
     flex: 1;
@@ -25,32 +28,34 @@ h1{
     direction: rtl;
     text-align: right;
 }
-.h4-container{
-	border: #ffffff solid 1px;
+
+.h4-container {
+    border: #ffffff solid 1px;
     background-color: #900c0c;
     margin: 0 5px;
     border-radius: 7px;
     font-size: 50px;
 }
-h6{
-	
-	text-align: center;
-	color: white;
-	margin: 0;
-	
+
+h6 {
+    text-align: center;
+    color: white;
+    margin: 0;
 }
-h1{
-	font-size: 26px;
+
+h1 {
+    font-size: 26px;
 }
-.hflex{
-direction: ltr;
-display: flex;
-position: relative;	
+
+.hflex {
+    direction: ltr;
+    display: flex;
+    position: relative;
 }
 
 
-.span{
-	display: block;
+.span {
+    display: block;
     width: 46px;
     height: 51px;
     position: absolute;
@@ -61,10 +66,21 @@ position: relative;
     background-color: #ffffff;
     box-shadow: -6px 0px 7px 6px white;
 }
-.note{
-	font-size: 30px;
-	color: white;
-	font-weight: bold;
-	background-color: #ce8602;
-	text-align: center;
+
+.note {
+    font-size: 30px;
+    color: white;
+    font-weight: bold;
+    background-color: #ce8602;
+    text-align: center;
 }
+
+.showWinnersContainer {
+    margin-top: 5px;
+    background-color: white;
+    padding: 3px;
+    height: 100px;
+    width: 100%;
+    display: none;
+}
+
